# FixedPoint

./: CMakeLists.txt  README.md
src/: FixedPoint.h
tests/: tests.cpp
